# raytracer

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: aabb.rs  aarect.rs  backup.rs  bvh.rs  camera.rs  config.rs  cube.rs  hittable.rs  hittable_list.rs  main.rs  materials.rs  medium.rs  moving_sphere.rs  onb.rs  perlin.rs  ray.rs  rotate.rs  scene.rs  sphere.rs  texture.rs  tools.rs  translate.rs  vec3.rs
src/camera/: camera.rs  mod.rs  ray.rs
src/geometry/: aabb.rs  aarect.rs  bvh.rs  cube.rs  flip_normals.rs  medium.rs  mod.rs  moving_sphere.rs  rotate.rs  sphere.rs  translate.rs
src/materials/: dielectric.rs  diffuse_light.rs  isotropic.rs  lambertian.rs  metal.rs  mod.rs
src/pdf/: cosine.rs  hittable.rs  mixture.rs  mod.rs  sphere.rs
src/renderer/: mod.rs  parallel_crossbeam.rs  parallel_rayon.rs  sequential.rs
src/texture/: checker.rs  image.rs  mod.rs  noise.rs  perlin.rs  solid.rs
