[package]
name = "raytracer"
version = "0.1.0"
authors = ["pb"]
edition = "2018"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.0-rc.8", features = ["derive"] }
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
image = { version = "0.23", default-features = false, features = ["png"] }
indicatif = "0.16"
num_cpus = "1.13.0"
rand = "0.8"
rayon = "1.5"

[profile.release]
debug = true
